--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy
+mxnet-cu101mkl
+torch
+torchvision
 scipy
 matplotlib
 pandas
@@ -11,8 +13,3 @@ pillow
 albumentations
 apex
 torchsummary
-future
-https://download.pytorch.org/whl/cu100/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
-https://download.pytorch.org/whl/cu100/torchvision-0.3.0-cp36-cp36m-linux_x86_64.whl
-tensorflow-gpu==2.0.0-alpha0
-mxnet-cu100mkl
